--- a/index.html
+++ b/index.html
@@ -101,6 +101,21 @@
     </div>
   </article>
 
+  <section class="parceiros" aria-label="Nossos parceiros">
+    <h2 class="container font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
+
+    <ul>
+      <li><img src="./img/parceiros/otimizadas/caravan.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/otimizadas/ranek.svg" alt="ranekd"></li>
+      <li><img src="./img/parceiros/otimizadas/handel.svg" alt="handel"></li>
+      <li><img src="./img/parceiros/otimizadas/dogs.svg" alt="dogs"></li>
+      <li><img src="./img/parceiros/otimizadas/lescone.svg" alt="lescone"></li>
+      <li><img src="./img/parceiros/otimizadas/flexblog.svg" alt="flexblog"></li>
+      <li><img src="./img/parceiros/otimizadas/wildbeast.svg" alt="wildbeast"></li>
+      <li><img src="./img/parceiros/otimizadas/surfbot.svg" alt="surfbot"></li>
+
+    </ul>
+  </section>
 </body>
 
 </html>
