✨ Feat: secao de depoimento

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
   <link rel="stylesheet" href="./css/style.css">
 
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> -->
+ 
 </head>
 
 <body>
@@ -115,6 +113,18 @@
       <li><img src="./img/parceiros/otimizadas/surfbot.svg" alt="surfbot"></li>
 
     </ul>
+  </section>
+
+  <section class="depoimento" aria-label="Depoimento">
+    <div>
+      <img src="./img/fotos/otimizadas/depoimento.jpg" alt="Pessoa andando numa bicicleta Bikcraft">
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote class="font-1-xl cor-p5">
+        <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo a todos que amo.</p>
+        <span class="font-1-m-b cor-p4">Maria Eduarda</span>
+      </blockquote>
+    </div>
   </section>
 </body>
 
