⚡️ Perf: otimizacao da index.html

--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
   <title>Contato | Bikcraft</title>
   <meta name="description" content="Termos e condições.">
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -104,7 +105,7 @@
         <p class="lojas-tempo font-1-s"><img src="./img/icones/otimizadas/horario.svg" alt="">08-18h de seg a dom</p>
       </div>
     </div>
-    
+
 
     <div class="lojas-item">
       <img src="./img/lojas/rj.jpg" alt="Mapa marcando o endereço em Rua Ali Perto, 66 - Rio de Janeiro - RJ">
