--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -157,6 +157,7 @@
       </div>
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados. </p>
     </div>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
