--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -38,14 +38,14 @@
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
-        <img src="../img/bicicleta/otimizadas/nimbus3.jpg" alt="">
-        <img src="../img/bicicleta/otimizadas/nimbus1.jpg" alt="">
-        <img src="../img/bicicleta/otimizadas/nimbus2.jpg" alt="">
+        <img src="../img/bicicleta/otimizadas/nimbus3.jpg" alt="Bicicleta 1">
+        <img src="../img/bicicleta/otimizadas/nimbus1.jpg" alt="Bicicleta 2">
+        <img src="../img/bicicleta/otimizadas/nimbus2.jpg" alt="Bicicleta 3">
       </div>
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a class="botao" href="../orcamento.html">Comprar Agora</a>
+          <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nebula">Comprar Agora</a>
           <span class="font-1-xs cor-6"><img src="../img/icones/otimizadas/entrega.svg" alt="">entrega em 5 dias</span>
           <span class="font-1-xs cor-6"><img src="../img/icones/otimizadas/estoque.svg" alt="">18 em estoque</span>
         </div>
