--- a/seguros.html
+++ b/seguros.html
@@ -67,84 +67,85 @@
     </div>
   </main>
 
-  <article class="vantagens-bg">
-    <div class="vantagens container">
-      <h2 class="font-1-xxl cor-0">vantagens<span class="cor-p1">.</span></h2>
-      <ul>
-        <li>
-          <img src="./img/icones/otimizadas/eletrica.svg" alt="">
-          <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
-          <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
-        </li>
-        <li>
-          <img src="./img/icones/otimizadas/carbono.svg" alt="">
-          <h3 class="font-1-l cor-0">Reparo de Quadro</h3>
-          <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
-        </li>
-        <li>
-          <img src="./img/icones/otimizadas/sustentavel.svg" alt="">
-          <h3 class="font-1-l cor-0">Sustentável</h3>
-          <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
-        </li>
-        <li>
-          <img src="./img/icones/otimizadas/rastreador.svg" alt="">
-          <h3 class="font-1-l cor-0">Recuperação</h3>
-          <p class="font-2-s cor-5">Recuperamos Bikcrafts roubadas sem custo adicional para o dono. Se não conseguirmos recuperar, damos uma nova para você.</p>
-        </li>
-        <li>
-          <img src="./img/icones/otimizadas/seguro.svg" alt="">
-          <h3 class="font-1-l cor-0">Segurança</h3>
-          <p class="font-2-s cor-5">O nosso seguro garante que todo reparo seja feito com peças genuínas e de alta qualidade. Confie na Bikcraft.</p>
-        </li>
-        <li>
-          <img src="./img/icones/otimizadas/velocidade.svg" alt="">
-          <h3 class="font-1-l cor-0">Rapidez</h3>
-          <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
-        </li>
-      </ul>
-    </div>
-  </article>
+  <article class=" vantagens-bg">
+          <div class="vantagens container">
+            <h2 class="font-1-xxl cor-0">vantagens<span class="cor-p1">.</span></h2>
+            <ul>
+              <li>
+                <img src="./img/icones/otimizadas/eletrica.svg" alt="">
+                <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
+                <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
+              </li>
+              <li>
+                <img src="./img/icones/otimizadas/carbono.svg" alt="">
+                <h3 class="font-1-l cor-0">Reparo de Quadro</h3>
+                <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+              </li>
+              <li>
+                <img src="./img/icones/otimizadas/sustentavel.svg" alt="">
+                <h3 class="font-1-l cor-0">Sustentável</h3>
+                <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
+              </li>
+              <li>
+                <img src="./img/icones/otimizadas/rastreador.svg" alt="">
+                <h3 class="font-1-l cor-0">Recuperação</h3>
+                <p class="font-2-s cor-5">Recuperamos Bikcrafts roubadas sem custo adicional para o dono. Se não conseguirmos recuperar, damos uma nova para você.</p>
+              </li>
+              <li>
+                <img src="./img/icones/otimizadas/seguro.svg" alt="">
+                <h3 class="font-1-l cor-0">Segurança</h3>
+                <p class="font-2-s cor-5">O nosso seguro garante que todo reparo seja feito com peças genuínas e de alta qualidade. Confie na Bikcraft.</p>
+              </li>
+              <li>
+                <img src="./img/icones/otimizadas/velocidade.svg" alt="">
+                <h3 class="font-1-l cor-0">Rapidez</h3>
+                <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+              </li>
+            </ul>
+          </div>
+          </article>
 
-  <article class="perguntas container">
-    <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
-    <dl>
-      <div>
-        <dt class="font-1-m-b">Quais são as formas de pagamento que vocês aceitam?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt class="font-1-m-b">Qual a garantia que possui?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt class="font-1-m-b">Posso parcelar um boleto?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt class="font-1-m-b">Qual Bikcraft devo escolher para o meu tamanho?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-    </dl>
-  </article>
+          <article class="perguntas container">
+            <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
+            <dl>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true">Quais são as formas de pagamento que vocês aceitam?</button></dt>
+                <dd id="pergunta1" class="font-2-s cor-9 ativa">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
+                <dd id="pergunta2" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
+                <dd id="pergunta3" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possui?</button></dt>
+                <dd id="pergunta4" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar um boleto?</button></dt>
+                <dd id="pergunta5" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Qual Bikcraft devo escolher para o meu tamanho?</button></dt>
+                <dd id="pergunta6" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras VIsa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+              </div>
+            </dl>
+          </article>
 
-  <footer class="footer-bg">
-    <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
-      <div class="footer-contato">
-        <h3 class="font-2-l-b cor-0">Contato</h3>
-        <ul class="cor-5 font-2-m">
-          <li><a href="tel:+5511999999999">+55 11 99999-9999</a></li>
-          <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
-          <li>Rua Logo Ali, 66 - Saúde</a></li>
-          <li>São Paulo - SP</li>
+          <footer class="footer-bg">
+            <div class="footer container">
+              <img src="./img/bikcraft.svg" alt="Bikcraft">
+              <div class="footer-contato">
+                <h3 class="font-2-l-b cor-0">Contato</h3>
+                <ul class="cor-5 font-2-m">
+                  <li><a href="tel:+5511999999999">+55 11 99999-9999</a></li>
+                  <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+                  <li>Rua Logo Ali, 66 - Saúde
+        </a></li>
+        <li>São Paulo - SP</li>
         </ul>
         <div class="footer-redes">
           <a href="./">
