--- a/seguros.html
+++ b/seguros.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="seguros container">
-      <div class="seguros-item">
+      <div class="seguros-item fadeInLeft" data-anime="200">
         <h3 class="font-1-xl cor-6">PRATA</h3>
         <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
         <ul class="font-2-m cor-0">
@@ -51,7 +51,7 @@
         <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
       </div>
 
-      <div class="seguros-item">
+      <div class="seguros-item fadeInRight" data-anime="400">
         <h3 class="font-1-xl cor-p1">OURO</h3>
         <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
         <ul class="font-2-m cor-0">
@@ -67,7 +67,7 @@
     </div>
   </main>
 
-  <article class=" vantagens-bg">
+  <article class="vantagens-bg">
           <div class="vantagens container">
             <h2 class="font-1-xxl cor-0">vantagens<span class="cor-p1">.</span></h2>
             <ul>
@@ -172,6 +172,8 @@
       </div>
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados. </p>
     </div>
+
+    <script src="./js/plugins/simple-anime.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
