--- a/seguros.html
+++ b/seguros.html
@@ -9,6 +9,8 @@
 
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
+
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="seguros">
@@ -67,7 +69,7 @@
     </div>
   </main>
 
-  <article class="vantagens-bg">
+  <article class=" vantagens-bg">
           <div class="vantagens container">
             <h2 class="font-1-xxl cor-0">vantagens<span class="cor-p1">.</span></h2>
             <ul>
