--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nebula Cosmic | Bikcraft</title>
-  <meta name="description" content="Termos e condições.">
+  <meta name="description" content="Nebula Cosmic">
 
+  <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="../css/style.css" as="style">
   <link rel="stylesheet" href="../css/style.css">
 
   <script>document.documentElement.classList.add('js')</script>
