--- a/orcamento.html
+++ b/orcamento.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Orçamento.">
 
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
-  <link rel="preload" href="./css/style..min.css" as="style">
+  <link rel="preload" href="./css/style.min.css" as="style">
   <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -119,7 +119,7 @@
         </div>
         <div class="col-2">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email">
+          <input type="email" id="email" name="email" required>
         </div>
         <h2 class="font-1-xs cor-9 col-2">entrega</h2>
         <div>
