✨ Feat: formulario com javascript

--- a/contato.html
+++ b/contato.html
@@ -69,10 +69,10 @@
         </div>
       </section>
       <section class="contato-formulario" aria-label="Formulário">
-        <form class="form" action="./contato.html">
+        <form class="form" action="./enviar.php" method="post">
           <div>
             <label for="nome">Nome</label>
-            <input type="text" id="telefone" name="telefone" placeholder="Seu nome">
+            <input type="text" id="nome" name="nome" placeholder="Seu nome">
           </div>
           <div>
             <label for="telefone">Telefone</label>
@@ -167,6 +167,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados. </p>
     </div>
     <script src="./js/script.js"></script>
+    <script src="./js/formulario.js"></script>
 </body>
 
 </html>
